--- a/client/src/components/css/ChattingPage.css
+++ b/client/src/components/css/ChattingPage.css
@@ -55,11 +55,11 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  background-color: white;
   font-size: 100px;
   height: 95vh;
   background-color: black;
   width: 80vw;
+  overflow: hidden;
 }
 
 #NabBar {
@@ -167,4 +167,12 @@
 .chatTime {
   font-size: 12px;
   color: rgba(128, 128, 128, 0.795);
+}
+.hide {
+  background-color: black;
+  position: fixed;
+  bottom: 0;
+  width: 80vw;
+  height: 100px;
+  z-index: 100;
 }
