--- a/client/src/components/css/ChattingPage.css
+++ b/client/src/components/css/ChattingPage.css
@@ -51,17 +51,6 @@
   right: 0;
 }
 
-#Video-Interface {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  font-size: 100px;
-  height: 95vh;
-  background-color: black;
-  width: 80vw;
-  overflow: hidden;
-}
-
 #NabBar {
   height: 5vh;
   width: 100%;
@@ -170,9 +159,25 @@
 }
 .hide {
   background-color: black;
-  position: fixed;
+  position: absolute;
   bottom: 0;
-  width: 80vw;
+  width: 1050px;
   height: 100px;
   z-index: 100;
+}
+
+#Video-Interface {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 100px;
+  height: 95vh;
+  background-color: black;
+  width: 80vw;
+  overflow: hidden;
+  min-width: 1335px;
+}
+
+#Video-Interface > div {
+  width: 100%;
 }
