--- a/client/src/components/css/ChattingPage.css
+++ b/client/src/components/css/ChattingPage.css
@@ -94,6 +94,8 @@
 .chatAvatar {
   width: 30px;
   height: 30px;
+  margin-left: 3px;
+  margin-top: 3px;
 }
 
 .chat-userInfo {
@@ -175,7 +177,6 @@
   background-color: black;
   width: 80vw;
   overflow: hidden;
-  min-width: 1335px;
 }
 
 #Video-Interface > div {
